# TheGreenEpoch

./: .gitignore  README.md  TODO.md  co2_intensity_analysis.ipynb  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json  requirements.md  vv_plan.md
TheGreenEpochWeb/: index.html  package.json  pnpm-lock.yaml  preprocess_data.py  vite.config.ts
data/: datacenter.csv  deepseekv3.csv  kimi_k2.csv  scenarios.csv
diagrams/: Makefile  activity_simulation_run.puml  activity_simulation_run_part2.puml  class_diagram.puml  hysteresis.puml  planning.pptx  ~$planning.pptx
legacy/: co2_intensity_analysis.ipynb  requirements.md
output/: opt_DS_DE.json  opt_DS_IT.json  opt_DS_SE.json  opt_DS_US.json  opt_KM_DE.json  opt_KM_IT.json  opt_KM_SE.json  opt_KM_US.json  overview.js  pilot_results.csv  results.csv  scenario.html  scenario.js  style.css  viewer.html  vv_results.csv
papers/: RELATED_WORK_TheGreenEpoch.md  conferencesTheGreenEpoch - conf_main.csv  conferencesTheGreenEpoch.ods
presentation/: DraftSAMv1.pptx  Makefile  acronyms.tex  bibliography.bib  example_main.tex  main-poster.tex  main.tex  nomenclature.tex  preamble.sty
presentation_2/: bibliography.bib  main.tex
presentation_final/: example_main.tex  main.tex  nomenclature.tex
publication/: .gitignore  run_experiments.sh
scripts/: visualize_results.py
src/: config.json  fetch_carbon_intensity.py  gui.py  main.py  run_vv.py  test_vv.py  visualize_results.py
thesis/: .gitignore  .gitlab-ci.yml  Makefile  bibliography.bib  i7-thesis.cls  latexmkrc  nomenclature.tex  (+2 more)
(+447 files in other folders)
