[project]
name = "thegreenepoch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numba>=0.65.1",
    "pandas>=3.0.2",
    "requests>=2.33.1",
]

[project.optional-dependencies]

notebooks = [
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
